--- a/public/.htaccess
+++ b/public/.htaccess
@@ -18,3 +18,7 @@
     RewriteCond %{HTTP:Authorization} .
     RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
 </IfModule>
+
+<IfModule headers_module>
+    Header set Access-Control-Allow-Origin "*"
+</IfModule>
